--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -5,7 +5,7 @@
 	<title>The History Center</title>
 </head>
 <body>
-<h1>The History Center</h1>h1>
+<h1>The History Center</h1>
 <p>Linn County Historical Society<p>
 
 </body>
