--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>The History Center</title>
+<link rel="stylesheet" type="text/css" href="C:\Users\Jennifer\Documents\GitHub\realdealbeall.github.io\unit_1\css\style.css">
+	<title>Grant Wood Art Gallery</title>
 </head>
 <body>
-<h1>The History Center</h1>
-<p>Linn County Historical Society<p>
+<h1>Grant Wood Art Gallery</h1>
+<p>Anamosa, IA<p>
 
 </body>
 </html>
