--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" type="text/css" href="C:\Users\Jennifer\Documents\GitHub\realdealbeall.github.io\unit_8\css\style.css">
+		<link rel="stylesheet" type="text/css" href="realdealbeall.github.io/unit_8/css/style.css">
 		<title>Cooltown Cookie Co.</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
